--- a/html/Memories.html
+++ b/html/Memories.html
@@ -329,15 +329,15 @@
 		<!--第十屏-->
       <div class="section">
           <div class="timeline"></div>
-          <div class="timepoint12"></div>
-          <div class="ly-box12">
+          <div class="timepoint11"></div>
+          <div class="ly-box11">
             <div class="ly-txt11">
-              <p class="ly-stxt01">最后的最后</p>
-              <p class="ly-stxt02">希望我最爱的庞猪猪</p>
-              <p class="ly-stxt03">能一直那么开心快乐</p>
-              <p class="ly-stxt04">希望我最爱的庞猪猪</p>
-              <p class="ly-stxt05">能永远18岁</p>
-              <p class="ly-stxt05">爱你！！！</p>
+              <p >最后的最后</p>
+              <p >希望我最爱的庞猪猪</p>
+              <p >能一直那么开心快乐</p>
+              <p >希望我最爱的庞猪猪</p>
+              <p >能永远18岁</p>
+              <p >爱你！！！</p>
             </div>
           </div>
       </div>
